# rails-fastapi-ai-microservice

./: .cursorrules  .gitignore  README.md  pyproject.toml
app/: main.py
app/routers/: chat.py  conversation.py  echo.py  health.py
app/schemas/: chat.py  conversation.py  echo.py  health.py
app/services/: conversation.py  llm.py
data/: policy.txt
docs/: memory-chain-revision.md
scripts/: test_chroma.py  test_chunking.py  test_embedding.py  test_lanchain.py  test_memory.py  test_openai.py  test_persistence.py  test_structured_output.py
